Fix summaries, add dark mode toggle

--- a/sass/_anchor.scss
+++ b/sass/_anchor.scss
@@ -5,7 +5,7 @@ h1,h2,h3,h4,h5,h6 {
     &:before {
       position: absolute;
       content: "# ";
-      left: -0.5em;
+      left: -0.8em;
     }
   }
 }
