--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -33,3 +33,23 @@ header > hr {
   margin-right: 5px;
   padding: 0;
 }
+
+.nav-dark-toggle {
+  position: relative;
+  cursor: pointer;
+  border: unset;
+  background: unset;
+  height: 17px;
+  width: 17px;
+  margin-bottom: 5px;
+  margin-left: 10px;
+  padding: 0;
+  > svg {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+  }
+}
+
